--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,26 +3,24 @@
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed"
-                aria-expanded="false">
+        <button id="hamburger" type="button" class="navbar-toggle collapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
       </div>
-      <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
-          id="example-navbar-collapse">
-      <ul class="nav navbar-nav navbar-right" id="navbar-menu">
+      <ul id="navbar-menu"
+          class="nav navbar-nav navbar-right collapse navbar-collapse">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", users_path %></li>
+          <li><%= link_to "Users", '#' %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="#" id="dropdown-toggle" class="dropdown-toggle">
               Account <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu">
+            <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
